[package]
name = "udp-over-ssh"
version = "0.1.0"
edition = "2021"
authors = [ "Endered" ]
description = "udp tunneling over ssh"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
base64 = "0.22.1"
futures = "0.3.30"
